plugins {
    id 'org.gradlex.maven-plugin-development' version '1.0.3' apply false
}

allprojects {
    group = 'net.hasor'
}

subprojects {
    plugins.withType(JavaPlugin).configureEach {
        java {
            toolchain.languageVersion = JavaLanguageVersion.of(17)
        }
        tasks.withType(JavaCompile).configureEach {
            options.encoding = 'UTF-8'
            options.release = 17
        }
        tasks.withType(Javadoc).configureEach {
            options.encoding = 'UTF-8'
            options.addStringOption('Xdoclint:none', '-quiet')
            failOnError = false
        }
        tasks.withType(Test).configureEach {
            useJUnit()
            jvmArgs '--add-opens', 'java.base/java.lang=ALL-UNNAMED'
        }
        tasks.withType(GenerateModuleMetadata).configureEach { enabled = false }
        dependencies {
            testImplementation "javax.inject:javax.inject:${property('lib.inject')}"
            testImplementation "junit:junit:${property('lib.junit')}"
            testImplementation "org.powermock:powermock-module-junit4:${property('lib.powermock')}"
            testImplementation "org.powermock:powermock-api-mockito2:${property('lib.powermock')}"
            testImplementation "ch.qos.logback:logback-classic:${property('lib.logback')}"
            testImplementation "com.alibaba:fastjson:${property('lib.fastjson')}"
        }

        plugins.withId('maven-publish') {
            apply plugin: 'signing'
            java {
                withSourcesJar()
                withJavadocJar()
            }
            publishing {
                publications {
                    mavenJava(MavenPublication) {
                        from components.java
                        pom {
                            name = providers.provider { project.findProperty('pomName') ?: project.name }
                            description = providers.provider { project.description ?: project.name }
                            url = 'https://www.hasor.net/'
                            licenses { license { name = 'The Apache Software License, Version 2.0'; url = 'https://www.apache.org/licenses/LICENSE-2.0.txt' } }
                            developers { developer { name = '赵永春(Mr.Zhao)'; email = 'zyc@hasor.net' } }
                            scm {
                                connection = 'scm:git:git@gitee.com:zycgit/hasor.git'
                                developerConnection = connection
                                url = 'https://gitee.com/zycgit/hasor'
                                tag = 'HEAD'
                            }
                            withXml {
                                def excluded = new LinkedHashSet(configurations.compileOnly.dependencies)
                                excluded.addAll(configurations.testImplementation.dependencies)
                                excluded.addAll(configurations.testRuntimeOnly.dependencies)
                                if (configurations.findByName('shaded')) {
                                    excluded.addAll(configurations.shaded.dependencies)
                                }
                                excluded.each { dep ->
                                    def groupId = dep.group ?: project.group
                                    def dependenciesNode = asNode().dependencies[0]
                                    dependenciesNode?.dependency?.findAll {
                                        it.groupId.text() == groupId.toString() && it.artifactId.text() == dep.name
                                    }?.each {
                                        dependenciesNode.remove(it)
                                    }
                                }
                            }
                        }
                    }
                }
                if (findProperty('centralBundleDir')) {
                    repositories { maven { name = 'centralBundle'; url = uri(findProperty('centralBundleDir')) } }
                }
            }
            signing {
                required { findProperty('centralRelease') == 'true' }
                def key = findProperty('maven.central.signing_key')
                if (key) useInMemoryPgpKeys(key.replace('\\n', '\n'), findProperty('maven.central.signing_password'))
                sign publishing.publications.mavenJava
            }
        }
    }
}
